--- a/vendir.lock.yml
+++ b/vendir.lock.yml
@@ -6,8 +6,8 @@ directories:
       sha: 359b4774261a929c7911e5619ac41e90c71c5bcd
     path: log-cache
   - git:
-      commitTitle: Create NOTICE
-      sha: 550374b941fee74157dcd8f82125edd84f04c96f
+      commitTitle: prometheus plugin
+      sha: 57d4c407d1f6d474b56860c4b2de87ea067a586e
     path: cf-k8s-logging-fluent
   path: vendor
 kind: LockConfig
